@@ -7,6 +7,8 @@ Stability update for v0.9.9
 * Scripts with Windows end of line (CR+LF) are now usable
 * Added RGB flat normalisation for CFA images and command GREY_FLAT
 * Added command SETFINDSTAR to define sigma and roundness parameters
+* New astrometric tool
+* Improved global registration
 
 v0.9.9, Jun 07, 2018
 Stability update for v0.9.8
