@@ -7,6 +7,8 @@ xxxxxxxx
 * Scripts with Windows end of line (CR+LF) are now usable
 * Added RGB flat normalisation for CFA images and command GREY_FLAT
 * Added command SETFINDSTAR to define sigma and roundness parameters
+* New astrometric tool
+* Improved global registration
 
 siril 0.9.9
 06/07/18
